# ChangeLog for games-puzzle/neverball
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/neverball/ChangeLog,v 1.48 2014/08/07 06:43:50 mr_bones_ Exp $

*neverball-1.6.0 (07 Aug 2014)

  07 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org> +neverball-1.6.0.ebuild:
  version bump (bug #519194)

  15 May 2014; Ulrich Müller <ulm@gentoo.org> neverball-1.5.4.ebuild:
  Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
  "sound", bug 357661.

  11 Oct 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -neverball-1.5.4-r1.ebuild, neverball-1.5.4.ebuild:
  say no to pointless rev bumps

*neverball-1.5.4-r1 (11 Oct 2013)

  11 Oct 2013; Sergei Trofimovich <slyfox@gentoo.org>
  +files/neverball-1.5.4-lm.patch, +neverball-1.5.4-r1.ebuild:
  Fix underlinking against libm: bug #464014 and fix by Ted Tanberry.

  10 Apr 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +files/neverball-1.5.4-libpng.patch, neverball-1.5.4.ebuild:
  add patch from Bernard Cafarelli to fix building against libpng-1.6 (bug
  #465416)

  14 Feb 2012; Tristan Heaven <tristan@gentoo.org> neverball-1.5.4.ebuild:
  Respect LINGUAS, bug #402311

  22 Jun 2011; Tupone Alfredo <tupone@gentoo.org> neverball-1.5.4.ebuild,
  +files/neverball-1.5.4-underlink.patch:
  Fix underlink. Bug #371885 by Diego Elio Pettenò

  11 Jan 2011; Michael Sterrett <mr_bones_@gentoo.org>
  neverball-1.5.4.ebuild:
  Add more use deps (bug #351347)

  08 Nov 2009; Joseph Jezak <josejx@gentoo.org> neverball-1.5.4.ebuild:
  Marked ppc stable for bug #290054.

  30 Oct 2009; Markus Meier <maekke@gentoo.org> neverball-1.5.4.ebuild:
  amd64/x86 stable, bug #290054

*neverball-1.5.4 (21 Sep 2009)

  21 Sep 2009; Michael Sterrett <mr_bones_@gentoo.org>
  -neverball-1.5.3.ebuild, +neverball-1.5.4.ebuild:
  version bump

*neverball-1.5.3 (09 Sep 2009)

  09 Sep 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +neverball-1.5.3.ebuild:
  version bump
