@@ -4,6 +4,6 @@ AUX neverball-1.5.4-underlink.patch 358 SHA256 9b523317f88d5ccd1333c5eb23aa6fc92
 DIST neverball-1.5.4.tar.gz 26767623 SHA256 ea31ca9f6eec70c8e66eaa20d7ce9e48295fdb077313b97637c503b16b7b0da6 SHA512 ffc0473ea3882edb84f190aa696c2e5fa1a38ea50f73bc144a3b694fd80c71a8d9936aa34f8bbd096523493849d428928a6efd2650c6da4c9962e0355d3cb9c2 WHIRLPOOL c0e6731ee28eb8ac987d5ca98ecbd93fb7d091060e2da51c6fe69043f05fe7d5f8179e62183f946e40b2f734a8041ab35ae1fdd4024e5ff6e25ab8633853e1f4
 DIST neverball-1.6.0.tar.gz 37772911 SHA256 73fe63cca4f96e2d355480d03bc0b2904e83a0abdf65fe8c52db5cc3cca88fa0 SHA512 174d05308aee3a5e693782c54dd389439752b3597f28193771041d30f6c4236a5d055b2fcca9460b1005e9f000ddb3cbc01b86ea15c2abbf6e5a7996e836f787 WHIRLPOOL 017ac177b3557e0473d94288c0645ce7e6ddf15cdfbddb6798b22a6341d9864532d0d2263ed785bbed8c1bf5c9e4acbc6e31effdcc06b299a8fcf7c1fa60e514
 EBUILD neverball-1.5.4.ebuild 2182 SHA256 9bb832475113598ece7365c41ba787f8a5200e60bc460becaab93a638c6cbb40 SHA512 d164981c5aafe53ece7f59558a1ba724da154f6726d0695c8ce97cdfb62115da9a62e65ef9f13158910dac89825793d178bacb673c6cd704d3351255f9ea9d37 WHIRLPOOL adfe8f92521ecd30a450124232f9e1a7bbe3983b6fe0a3718fe910b8936e2710fe2c29d2c7fe2bc1cf176fa30d31ff6d4f014b0b5d3962b49b20ce823cb378be
-EBUILD neverball-1.6.0.ebuild 2259 SHA256 0f4e2514ad503a176f8bde3ad57bc43a98f49739d2bb9664da3b4ad1699788e2 SHA512 ace2d8fc9cf38afc6ded01e8ec6e05014026e30b2d3380733df169a3b3456e326d60c410d51d5b7bdbde07f1d57b025d1a45b5c5c93f6aa254e64f9ccae70b58 WHIRLPOOL 10ddbe17d78d72c648dedd16e9f72558e4ce95f46e9f363b9b50b48a93dbbe607937f0366a974b2952057ea08467e6dbeedcda1fc159c35e750ffeb298b5c802
-MISC ChangeLog 6836 SHA256 0bfce625436d3efe2b9bfbdcbe01670ef27e5d4d01739a578ece3c64739bcdd7 SHA512 2cd1cbb025234e3e4bb8d7d90809ca566cde7fdc4c3d41ac427699c510f9be871a5ecd5075d755d86939473fbf80935ba7905f3f6a4891093793655d6bcb04e9 WHIRLPOOL 07b63cd7b38adbf2f42602da03837ff7c5f354e543b02017945dd9e2f21a4082ba24ebbf9740b335ec3c5b87a58e7f1f93fa2f07cee205f163cf7eb96f3a2d19
+EBUILD neverball-1.6.0.ebuild 2321 SHA256 e5d94dc86d7bf7209c6e5a37dbef5283af4f6c68d6f194dc517b30d9507b4fb7 SHA512 3d80d42c920457cdb31f8212466deaa29b57993e8489d1b6178795c5d99ecbfea041c1ecdd9cbe48e1f6b9a903243e14f86a51212a8b65e5852bcc74bfd527f1 WHIRLPOOL 7d69c677fcbf941f1bf693f15931879cd47fac47912b3aac10d889c6b65cf5120ea25b21c7e18d7b755e9bb8da1ab54a84d7868e6f85c0fd37fb22dd333de7f1
+MISC ChangeLog 6958 SHA256 5529b870c3d75d69d77a89508ddc6281762d871564399951e07024ee66f9ed5d SHA512 34e73f910abb7cebf4a61cec589b94532f1cb769ea9f96a27ade2a3039f05561f9b457e64eab4a999a0d190cb370808336c50f055781b26ffa8d87cde00168ae WHIRLPOOL c82235ad2af3f809f6be0490b6f68f03d46feeecc026eccfd80163ef7f0ecaaca591057161050f1ef794e8af9759e0e55a0fc9546b11384abc4da022412b2d0b
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
