@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/neverball
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/neverball/ChangeLog,v 1.48 2014/08/07 06:43:50 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/neverball/ChangeLog,v 1.49 2014/08/12 15:45:00 mr_bones_ Exp $
+
+  12 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org> neverball-1.6.0.ebuild:
+  fix up icon install with patch from Fab
 
 *neverball-1.6.0 (07 Aug 2014)
 
